tests/models/enum/named/i8/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(expected = "val")]
        value: i8
    },
}
fn main() {}
